--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,11 @@
 			<artifactId>spring-cloud-starter-feign</artifactId>
 			<version>1.4.2.RELEASE</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
