--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,18 @@
 		    <version>${swagger.version}</version>
 		</dependency>
 	</dependencies>
-	
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
+				</configuration>
+			</plugin>
+		</plugins>			
+	</build>
 	<!--  
 	<repositories>
         <repository>
