--- a/mall-account/cloudbuild.yaml
+++ b/mall-account/cloudbuild.yaml
@@ -3,6 +3,7 @@ steps:
   args: ['install']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/amabono/mall-account/mall-account-test', '.']
+  env: ['PROJECT_ROOT=mall-account']
   timeout: 500s
 options:
   machineType: 'N1_HIGHCPU_8' # HIGHCPU로 빌드 스피드 업
