--- a/mall-account/cloudbuild.yaml
+++ b/mall-account/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
-- name: 'gcr.io/cloud-builders/mvn'
+- name: 'asia.gcr.io/cloud-builders/mvn'
   args: ['install']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/amabono/mall-account/mall-account-test', '.']
+- name: 'asia.gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'asia.gcr.io/amabono/mall-account/mall-account-test', '.']
   timeout: 500s
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/amabono/mall-account/mall-account-test']  
+  args: ['push', 'asia.gcr.io/amabono/mall-account/mall-account-test']  
 options:
   machineType: 'N1_HIGHCPU_8' # HIGHCPU로 빌드 스피드 업
 timeout: 1000s # 빌드 자체에 대한 타임 아웃
